src/test/deca/codegen/valid/set_attributes_in_main.deca
// Test to assign the value of the attributes in main

class Person{
    int age;
}

{
    Person Jean = new Person();
    Jean.age = 12;
    println(Jean.age);
}