src/test/deca/codegen/invalid/this_in_main.deca
// Using this in the main program


{
    this.field = 5;
}